# audio-noise-effects

./: .gitignore  LLM_FILTERING_INTEGRATION.md  MODULE_STRUCTURE.md  PRD.md  README.md  REFACTORING_SUMMARY.md  SIMILARITY_INTEGRATION.md  USAGE.md  api.py  el-output  enhanced-rite-470210-c9-4092f029b2e2.json  main.py  next.config.ts  package-lock.json  process_stt_embeddings.py  pyproject.toml  requirements.txt  semantic-search.py  semantic_matcher.py  stt_google.py  test_imports.py  test_timeline.csv  test_transcript_embedding.py  video_audio_merger.py
1_speech_to_text/: full_transcription.json  word_timing.json
2_text-processing/: example_usage.py
3_similarity/: __init__.py
STT/: example_usage.py  stt_elevenlabs.py
app/: globals.css
arnaud/: convert_mp3_to_wav.py  example_metadata.json  test_audio_merger.py
audio_extraction/: README.md  video_to_audio.py
components/: video-editor-page.tsx  video-editor.tsx  video-upload.tsx
data/: soundbible_details_from_section.csv  soundbible_embeddings_metadata.json  soundbible_metadata.csv  test_speech_embeddings.csv  video_speech_embeddings.csv
easyui/: package-lock.json
filtering/: README.md  filtering.py  prompts.py  schemas.py
gcp_deployment/: setup_gcp.sh
llm_filtering/: README.md  __init__.py  filtering.py  prompts.py  test_filtering.py  test_output.json
merging_audio/: audio_job_worker.py  audio_merger.py  convert_mp3_to_wav.py  video_audio_merger.py
old/: LLM-sentence-highlight.py  embeddings.py  output.txt  output_unstructured.txt  semantic-search.py  stt_google.py
output/: similarity.json  (+3 more)
(+70 files in other folders)
