[project]
name = "audio-noise-effect"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.2",
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "elevenlabs>=2.23.0",
    "ffmpeg-python>=0.2.0",
    "google-genai>=1.54.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "pydub>=0.25.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "sentence-transformers>=5.1.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]
vision = [
    "accelerate>=1.11.0",
    "av>=16.0.1",
    "bitsandbytes>=0.48.2",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "torchvision>=0.24.1",
    "transformers>=4.57.1",
    "vertexai>=1.71.1",
]

[project.scripts]
test = "main:main"
